welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:20: error: type mismatch;
 found   : Unit
 required: Boolean
	droite()	
              ^SlugTracking:19: error: type mismatch;
 found   : Unit
 required: Boolean
if (estFaceMur()){
^